<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Admin"
    android:id="@+id/drawer_layout">

   <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:layout_gravity="start"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/admin_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_back"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/profile"
            android:isScrollContainer="false" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bungee"
                    android:letterSpacing="0.1"
                    android:text="@string/logo_name"
                    android:textColor="@color/black"
                    android:textSize="22sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/app_name"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"

                    android:elevation="8dp"
                    android:id="@+id/header_search">


                    <EditText
                        android:id="@+id/rech_admin"
                        android:layout_width="263dp"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:ems="10"
                        android:text="@string/rech"
                        android:textColor="@color/card4"
                        android:typeface="normal" />

                    <ImageButton
                        android:id="@+id/rech_admin_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/search" />







                </RelativeLayout>



            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card1"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/atelier_icon" />




                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/ateliers"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card2"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/machine_icon" />
                        <!-- -->


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/machines"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card3"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/employe_icon" />




                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/profiles"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/card4"
                        android:elevation="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/stat_icon" />
                        <!--android:src="@drawable/restaurant_icon" -->


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/statistics"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"

                android:background="@color/banner_background_light">

                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:background="@color/banner_background"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/FeaturedL"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/FeaturedLD"
                        android:textColor="@color/white" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/home_background" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bungee"
                        android:text="Les chef
                                                                 des equipes"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerChefEquipe"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:background="@color/home_background"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bungee"
                        android:text="Les Techniciens
                         Maintenance"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />



                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/techRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:background="@color/home_background"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>